Rewrite accordion code from scratch
Didn't go too well the first time. Wasn't happy. Let's try this again.

--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,8 @@
 <title>Fixed Accordion</title>
 
 <link rel="stylesheet" type="text/css" href="src/css/global.css" />
-<link rel="stylesheet" type="text/css" href="src/css/main.css" />
+<link rel="stylesheet" type="text/css" href="src/css/fixed-accordion.css" />
+<link rel="stylesheet" type="text/css" href="src/css/demo.css" />
 </head>
 
 
@@ -292,5 +293,6 @@
 
 	<script type="text/javascript" src="src/js/utils.js"></script>
 	<script type="text/javascript" src="src/js/fixed-accordion.js"></script>
+	<script type="text/javascript" src="src/js/demo.js"></script>
 </body>
 </html>
