Drop "Fixed" from project's name
Simply calling it "Accordion" is enough.

--- a/index.htm
+++ b/index.htm
@@ -3,17 +3,17 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="initial-scale=1, minimum-scale=1" />
-<title>Fixed Accordion</title>
+<title>Accordion</title>
 
 <link rel="stylesheet" type="text/css" href="src/css/global.css" />
-<link rel="stylesheet" type="text/css" href="src/css/fixed-accordion.css" />
+<link rel="stylesheet" type="text/css" href="src/css/accordion.css" />
 <link rel="stylesheet" type="text/css" href="src/css/demo.css" />
 </head>
 
 
 <body>
 
-	<ul class="fixed-accordion">
+	<ul class="accordion">
 		<li>
 			<h3>Apples</h3>
 			<div class="fold">
@@ -292,7 +292,7 @@
 
 
 	<script type="text/javascript" src="src/js/utils.js"></script>
-	<script type="text/javascript" src="src/js/fixed-accordion.js"></script>
+	<script type="text/javascript" src="src/js/accordion.js"></script>
 	<script type="text/javascript" src="src/js/demo.js"></script>
 </body>
 </html>
