--- a/demo-long.htm
+++ b/demo-long.htm
@@ -7,7 +7,41 @@
 
 <link rel="stylesheet" type="text/css" href="src/css/global.css" />
 <link rel="stylesheet" type="text/css" href="src/css/accordion.css" />
-<link rel="stylesheet" type="text/css" href="src/css/demo.css" />
+<style type="text/css">
+/** Demo styling, not necessary for the accordion's final effect. */
+.accordion{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+	.accordion > li{
+
+	}
+		.accordion > li > h3{
+			background: #2c4d2b;
+			color: #fff;
+			padding: .5em;
+			cursor: pointer;
+
+			-webkit-user-select:	none;
+			-moz-user-select:		none;
+			user-select:			none;
+		}
+
+		.accordion > li > .fold{
+			padding: 1em;
+		}
+
+		/** Align fruit graphics/demo content */
+		.accordion img{
+			max-width: 20em;
+			margin-right: 1.5em;
+			float: left;
+		}
+			.accordion img + p{
+				margin-top: 0;
+			}
+</style>
 </head>
 
 
