Rename and clean-up initial demo file
Other accordion demos will be added, so it's important to differentiate.
Also removed a script tag I forgot to delete in abef2af.

--- a/demo-long.htm
+++ b/demo-long.htm
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="initial-scale=1, minimum-scale=1" />
-<title>Accordion</title>
+<title>Accordion Demo: Long</title>
 
 <link rel="stylesheet" type="text/css" href="src/css/global.css" />
 <link rel="stylesheet" type="text/css" href="src/css/accordion.css" />
@@ -325,7 +325,6 @@
 	</ul>
 
 
-	<script type="text/javascript" src="src/js/utils.js"></script>
 	<script type="text/javascript" src="src/js/accordion.js"></script>
 	<script type="text/javascript" src="src/js/demo.js"></script>
 </body>
