Add support for keyboard navigation

--- a/demo-long.htm
+++ b/demo-long.htm
@@ -27,6 +27,9 @@
 			-moz-user-select:     none;
 			user-select:          none;
 		}
+			.accordion > li > h3:focus{
+				background: #52964f;
+			}
 
 		.accordion > li > .fold{
 			padding: 1em;
