Move demo files into their own subdirectory

--- a/demos/basic-small.htm
+++ b/demos/basic-small.htm
@@ -5,9 +5,10 @@
 <meta name="viewport" content="initial-scale=1, minimum-scale=1" />
 <title>Accordion Demo: Small</title>
 
-<link rel="stylesheet" type="text/css" href="src/css/global.css" />
-<link rel="stylesheet" type="text/css" href="src/css/accordion.css" />
-<style type="text/css">
+<link rel="stylesheet" type="text/css" href="assets/reset.css" />
+<link rel="stylesheet" type="text/css" href="../accordion.css" />
+<style>
+
 body{
 	padding: 1em;
 	text-align: center;
@@ -57,6 +58,7 @@ body{
 .accordion + img{
 	max-width: 20em;
 	vertical-align: middle;
+	width: 100%;
 }
 
 .accordion ul{
@@ -175,11 +177,11 @@ body{
 		</li>
 	</ul>
 
-	<img src="src/img/veggies.jpg" alt="" />
+	<img src="assets/img/veggies.jpg" alt="" />
 	<p>Mauris aliquam arcu libero, eget venenatis lorem sodales id. Donec pellentesque tortor quis metus placerat, vel consequat nisi pharetra. Quisque semper magna eget nulla rutrum, ut hendrerit sem imperdiet. Maecenas mauris lectus, semper porttitor nunc vel, interdum blandit ante. Pellentesque suscipit lacinia tempus. Proin feugiat porttitor cursus. Cras commodo justo a elementum interdum. Quisque rhoncus erat ante, ut cursus tellus rutrum et. Cras nulla arcu, tincidunt sed erat at, rutrum posuere orci. Nam imperdiet nisi eu leo mollis scelerisque. Aliquam viverra non velit id sagittis.</p>
 	<p>Cras facilisis mauris et libero sollicitudin sollicitudin. Fusce imperdiet velit eget enim gravida, a mattis sem commodo. Fusce tincidunt nec erat non suscipit. Pellentesque fringilla erat urna, non mollis lacus pulvinar sit amet. Nunc feugiat ligula ultricies dignissim condimentum. Sed rutrum nulla eu eros interdum, nec interdum sapien vehicula. Praesent non est est. Nam consequat eros eget tellus placerat pellentesque. Vivamus eu ante nisl. Suspendisse in lorem et massa consectetur adipiscing. Donec molestie pulvinar adipiscing. Phasellus iaculis ac lorem ac sollicitudin. Aliquam convallis porttitor enim vitae blandit. Pellentesque aliquam dolor semper, facilisis erat vel, vehicula augue.</p>
 
-	<script type="text/javascript" src="src/js/accordion.js"></script>
-	<script type="text/javascript" src="src/js/demo.js"></script>
+	<script src="../accordion.js"></script>
+	<script src="assets/shared.js"></script>
 </body>
 </html>
