Use IE8 property punch if available
While the Accordion class doesn't support IE8-9 per se, it does allow an
author to do so if they're using a particular polyfill bundle:

    https://github.com/Alhadis/Snippets/blob/master/js/min/ie.lteIE9.js

Simply include the aforementioned script before the accordion class, and
the polyfills inside will take care of the rest.

--- a/demos/basic-large.htm
+++ b/demos/basic-large.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-AU">
 <head>
+<!--[if lte IE 9]><script src="assets/ie.lteIE9.js"></script><![endif]-->
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="initial-scale=1, minimum-scale=1" />
 <title>Accordion Demo: Large</title>
@@ -39,7 +40,6 @@
 		/** Align fruit graphics/demo content */
 		.accordion img{
 			max-width: 20em;
-			width: 100%;
 			margin: 0 1.5em 1em 0;
 			float: left;
 		}
