--- a/demos/basic-small.htm
+++ b/demos/basic-small.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-AU">
 <head>
+<!--[if lte IE 9]><script src="assets/ie.lteIE9.js"></script><![endif]-->
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="initial-scale=1, minimum-scale=1" />
 <title>Accordion Demo: Small</title>
