Decouple demo configurations from shared script
This allows more flexible testing of different option-sets.

--- a/demos/anim-switch.htm
+++ b/demos/anim-switch.htm
@@ -393,6 +393,12 @@ aside{
 
 
 	<script src="../accordion.js"></script>
-	<script src="assets/shared.js"></script>	
+	<script src="assets/shared.js"></script>
+	<script>
+		runDemo({
+			animHeight: true
+		});
+	</script>
+
 </body>
 </html>
