--- a/demos/basic-large.htm
+++ b/demos/basic-large.htm
@@ -332,5 +332,9 @@
 
 	<script src="../accordion.js"></script>
 	<script src="assets/shared.js"></script>
+	<script>
+		runDemo();
+	</script>
+
 </body>
 </html>
