--- a/demos/basic-small.htm
+++ b/demos/basic-small.htm
@@ -184,5 +184,9 @@ body{
 
 	<script src="../accordion.js"></script>
 	<script src="assets/shared.js"></script>
+	<script>
+		runDemo();
+	</script>
+
 </body>
 </html>
