Improve appearance of nested accordion demo for mobile

--- a/demos/nested.htm
+++ b/demos/nested.htm
@@ -70,7 +70,7 @@ html{
 		}
 		
 	.fold .fold{
-		padding: .5em 0;
+		padding: .5em 1em;
 	}
 		li{
 			background: #fff;
@@ -94,6 +94,18 @@ html{
 			margin-bottom: 0;
 			padding-bottom: 1em;
 		}
+	
+	@media (max-width: 37.5em){
+		img{
+			max-width: 100%;
+			float: none;
+			display: block;
+			margin: .5em auto .75em;
+		}
+		img ~ *{
+			font-size: .9em;
+		}
+	}
 </style>
 </head>
 
