--- a/demos/nested.htm
+++ b/demos/nested.htm
@@ -2619,7 +2619,9 @@ html{
 	<script src="../accordion.js"></script>
 	<script src="assets/shared.js"></script>
 	<script>
-		runDemo();
+		runDemo({
+			animHeight: "auto"
+		});
 		var a = accordions[0];
 		var f = a.folds[1];
 	</script>
