Add logic to update Fold heights on resize

--- a/index.htm
+++ b/index.htm
@@ -42,6 +42,7 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 		</li>
 	</ul>
 
+	<script src="fold.js"></script>
 	<script src="accordion.js"></script>
 	<script>
 		new Accordion(document.getElementsByClassName("accordion")[0])
