Add logic to update height of Accordion containers

--- a/index.htm
+++ b/index.htm
@@ -41,6 +41,11 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 			</div>
 		</li>
 	</ul>
+	
+	<div id="mindless-copy">
+		<p>Phasellus aliquam scelerisque commodo. Pellentesque id turpis turpis. Phasellus et rutrum enim. Integer id aliquam mauris, eget facilisis est. Duis bibendum tempor velit et egestas. In ac ante sollicitudin, porta ligula sit amet, tristique metus. Nunc at pulvinar enim. Donec posuere, quam sit amet cursus accumsan, elit dolor feugiat orci, nec imperdiet turpis ligula ultrices eros.</p>
+		<p>Suspendisse quis sapien at risus lobortis bibendum. Nunc sed accumsan felis. Nullam rutrum interdum dolor tempor faucibus. Fusce non nunc augue. Proin luctus porttitor dictum. Sed pellentesque ligula vel neque lobortis sagittis. Vivamus ut laoreet metus.</p>
+	</div>
 
 	<script src="fold.js"></script>
 	<script src="accordion.js"></script>
