--- a/index.htm
+++ b/index.htm
@@ -103,9 +103,9 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 	<script src="fold.js"></script>
 	<script src="accordion.js"></script>
 	<script>
-		var accordions = document.getElementsByClassName("accordion");
-		for(var i = 0, l = accordions.length; i < l; ++i){
-			new Accordion(accordions[i]);
+		var elements = document.getElementsByClassName("accordion");
+		for(var i = 0, l = elements.length; i < l; ++i){
+			new Accordion(elements[i]);
 		}
 	</script>
 </body>
