Move supplementary code into a separate file

--- a/index.htm
+++ b/index.htm
@@ -100,6 +100,7 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 		<p>Suspendisse quis sapien at risus lobortis bibendum. Nunc sed accumsan felis. Nullam rutrum interdum dolor tempor faucibus. Fusce non nunc augue. Proin luctus porttitor dictum. Sed pellentesque ligula vel neque lobortis sagittis. Vivamus ut laoreet metus.</p>
 	</div>
 
+	<script src="helpers.js"></script>
 	<script src="fold.js"></script>
 	<script src="accordion.js"></script>
 	<script>
