--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 </head>
 
 
-<body>
+<body class="clamp-width">
 
 	<ul class="accordion">
 		<li class="open">
@@ -108,6 +108,11 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 		for(var i = 0, l = elements.length; i < l; ++i){
 			new Accordion(elements[i]);
 		}
+		
+		setTimeout(e => document.querySelector("h2").dispatchEvent(new MouseEvent("click")), 500);
+		setTimeout(e => document.querySelector("h3").dispatchEvent(new MouseEvent("click")), 750);
+		setTimeout(e => document.body.classList.remove("clamp-width"), 1000);
+		setTimeout(e => Accordion.onResize(), 1050);
 	</script>
 </body>
 </html>
