Use static HTML for generating demo scaffolds

--- a/demos/index.htm
+++ b/demos/index.htm
@@ -13,26 +13,121 @@
 
 <body>
 
-	<ul id="scaffold"></ul>
-		+
-			+
-				-
-				-
-				-
-			-
-				-
-				-
-			-
-				-
-				-
-			-
-		-
-		-
-			-
-			-
-		-
-	
-	
+	<ul class="accordion">
+		<li class="open">
+			<h1>A</h1>
+			<div class="fold">
+				<p>Laborum non consectetur incididunt sit sunt. Sunt exercitation laborum aliqua laborum ipsum sit laborum aliqua reprehenderit id. Mollit sunt mollit anim magna officia. Tempor velit id adipisicing magna. Aute anim nisi in velit tempor sint nostrud. Sit aute anim cillum esse irure commodo velit cillum ad tempor duis pariatur.Consectetur irure non do sint mollit aliquip. Adipisicing amet nulla sit nulla eiusmod nulla nisi nostrud fugiat non ex labore. Deserunt et deserunt ex consectetur.</p>
+				<ul class="accordion">
+					<li class="open">
+						<h2>A.1</h2>
+						<div class="fold">
+							<p>Laborum non consectetur incididunt sit sunt. Sunt exercitation laborum aliqua laborum ipsum sit laborum aliqua reprehenderit id. Mollit sunt mollit anim magna officia. Tempor velit id adipisicing magna. Aute anim nisi in velit tempor sint nostrud. Sit aute anim cillum esse irure commodo velit cillum ad tempor duis pariatur.Consectetur irure non do sint mollit aliquip. Adipisicing amet nulla sit nulla eiusmod nulla nisi nostrud fugiat non ex labore. Deserunt et deserunt ex consectetur.</p>
+							<ul class="accordion">
+								<li class="open">
+									<h3>A.1.1</h3>
+									<div class="fold">
+										<p>Laborum non consectetur incididunt sit sunt. Sunt exercitation laborum aliqua laborum ipsum sit laborum aliqua reprehenderit id. Mollit sunt mollit anim magna officia. Tempor velit id adipisicing magna. Aute anim nisi in velit tempor sint nostrud. Sit aute anim cillum esse irure commodo velit cillum ad tempor duis pariatur.Consectetur irure non do sint mollit aliquip. Adipisicing amet nulla sit nulla eiusmod nulla nisi nostrud fugiat non ex labore. Deserunt et deserunt ex consectetur.</p>
+									</div>
+								</li>
+								<li>
+									<h3>A.1.2</h3>
+									<div class="fold">
+										<p>Laborum non consectetur incididunt sit sunt. Sunt exercitation laborum aliqua laborum ipsum sit laborum aliqua reprehenderit id. Mollit sunt mollit anim magna officia. Tempor velit id adipisicing magna. Aute anim nisi in velit tempor sint nostrud. Sit aute anim cillum esse irure commodo velit cillum ad tempor duis pariatur.Consectetur irure non do sint mollit aliquip. Adipisicing amet nulla sit nulla eiusmod nulla nisi nostrud fugiat non ex labore. Deserunt et deserunt ex consectetur.</p>
+									</div>
+								</li>
+								<li>
+									<h3>A.1.3</h3>
+									<div class="fold">
+										<p>Laborum non consectetur incididunt sit sunt. Sunt exercitation laborum aliqua laborum ipsum sit laborum aliqua reprehenderit id. Mollit sunt mollit anim magna officia. Tempor velit id adipisicing magna. Aute anim nisi in velit tempor sint nostrud. Sit aute anim cillum esse irure commodo velit cillum ad tempor duis pariatur.Consectetur irure non do sint mollit aliquip. Adipisicing amet nulla sit nulla eiusmod nulla nisi nostrud fugiat non ex labore. Deserunt et deserunt ex consectetur.</p>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<h2>A.2</h2>
+						<div class="fold">
+							<p>Laborum non consectetur incididunt sit sunt. Sunt exercitation laborum aliqua laborum ipsum sit laborum aliqua reprehenderit id. Mollit sunt mollit anim magna officia. Tempor velit id adipisicing magna. Aute anim nisi in velit tempor sint nostrud. Sit aute anim cillum esse irure commodo velit cillum ad tempor duis pariatur.Consectetur irure non do sint mollit aliquip. Adipisicing amet nulla sit nulla eiusmod nulla nisi nostrud fugiat non ex labore. Deserunt et deserunt ex consectetur.</p>
+							<ul class="accordion">
+								<li>
+									<h3>A.2.1</h3>
+									<div class="fold">
+										<p>Laborum non consectetur incididunt sit sunt. Sunt exercitation laborum aliqua laborum ipsum sit laborum aliqua reprehenderit id. Mollit sunt mollit anim magna officia. Tempor velit id adipisicing magna. Aute anim nisi in velit tempor sint nostrud. Sit aute anim cillum esse irure commodo velit cillum ad tempor duis pariatur.Consectetur irure non do sint mollit aliquip. Adipisicing amet nulla sit nulla eiusmod nulla nisi nostrud fugiat non ex labore. Deserunt et deserunt ex consectetur.</p>
+									</div>
+								</li>
+								<li>
+									<h3>A.2.2</h3>
+									<div class="fold">
+										<p>Laborum non consectetur incididunt sit sunt. Sunt exercitation laborum aliqua laborum ipsum sit laborum aliqua reprehenderit id. Mollit sunt mollit anim magna officia. Tempor velit id adipisicing magna. Aute anim nisi in velit tempor sint nostrud. Sit aute anim cillum esse irure commodo velit cillum ad tempor duis pariatur.Consectetur irure non do sint mollit aliquip. Adipisicing amet nulla sit nulla eiusmod nulla nisi nostrud fugiat non ex labore. Deserunt et deserunt ex consectetur.</p>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<h2>A.3</h2>
+						<div class="fold">
+							<p>Laborum non consectetur incididunt sit sunt. Sunt exercitation laborum aliqua laborum ipsum sit laborum aliqua reprehenderit id. Mollit sunt mollit anim magna officia. Tempor velit id adipisicing magna. Aute anim nisi in velit tempor sint nostrud. Sit aute anim cillum esse irure commodo velit cillum ad tempor duis pariatur.Consectetur irure non do sint mollit aliquip. Adipisicing amet nulla sit nulla eiusmod nulla nisi nostrud fugiat non ex labore. Deserunt et deserunt ex consectetur.</p>
+							<ul class="accordion">
+								<li>
+									<h3>A.3.1</h3>
+									<div class="fold">
+										<p>Laborum non consectetur incididunt sit sunt. Sunt exercitation laborum aliqua laborum ipsum sit laborum aliqua reprehenderit id. Mollit sunt mollit anim magna officia. Tempor velit id adipisicing magna. Aute anim nisi in velit tempor sint nostrud. Sit aute anim cillum esse irure commodo velit cillum ad tempor duis pariatur.Consectetur irure non do sint mollit aliquip. Adipisicing amet nulla sit nulla eiusmod nulla nisi nostrud fugiat non ex labore. Deserunt et deserunt ex consectetur.</p>
+									</div>
+								</li>
+								<li>
+									<h3>A.3.2</h3>
+									<div class="fold">
+										<p>Laborum non consectetur incididunt sit sunt. Sunt exercitation laborum aliqua laborum ipsum sit laborum aliqua reprehenderit id. Mollit sunt mollit anim magna officia. Tempor velit id adipisicing magna. Aute anim nisi in velit tempor sint nostrud. Sit aute anim cillum esse irure commodo velit cillum ad tempor duis pariatur.Consectetur irure non do sint mollit aliquip. Adipisicing amet nulla sit nulla eiusmod nulla nisi nostrud fugiat non ex labore. Deserunt et deserunt ex consectetur.</p>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<h2>A.4</h2>
+						<div class="fold">
+							<p>Laborum non consectetur incididunt sit sunt. Sunt exercitation laborum aliqua laborum ipsum sit laborum aliqua reprehenderit id. Mollit sunt mollit anim magna officia. Tempor velit id adipisicing magna. Aute anim nisi in velit tempor sint nostrud. Sit aute anim cillum esse irure commodo velit cillum ad tempor duis pariatur.Consectetur irure non do sint mollit aliquip. Adipisicing amet nulla sit nulla eiusmod nulla nisi nostrud fugiat non ex labore. Deserunt et deserunt ex consectetur.</p>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</li>
+		<li>
+			<h1>B</h1>
+			<div class="fold">
+				<p>Laborum non consectetur incididunt sit sunt. Sunt exercitation laborum aliqua laborum ipsum sit laborum aliqua reprehenderit id. Mollit sunt mollit anim magna officia. Tempor velit id adipisicing magna. Aute anim nisi in velit tempor sint nostrud. Sit aute anim cillum esse irure commodo velit cillum ad tempor duis pariatur.Consectetur irure non do sint mollit aliquip. Adipisicing amet nulla sit nulla eiusmod nulla nisi nostrud fugiat non ex labore. Deserunt et deserunt ex consectetur.</p>
+			</div>
+		</li>
+		<li>
+			<h1>C</h1>
+			<div class="fold">
+				<p>Laborum non consectetur incididunt sit sunt. Sunt exercitation laborum aliqua laborum ipsum sit laborum aliqua reprehenderit id. Mollit sunt mollit anim magna officia. Tempor velit id adipisicing magna. Aute anim nisi in velit tempor sint nostrud. Sit aute anim cillum esse irure commodo velit cillum ad tempor duis pariatur.Consectetur irure non do sint mollit aliquip. Adipisicing amet nulla sit nulla eiusmod nulla nisi nostrud fugiat non ex labore. Deserunt et deserunt ex consectetur.</p>
+				<ul class="accordion">
+					<li>
+						<h2>C.1</h2>
+						<div class="fold">
+							<p>Laborum non consectetur incididunt sit sunt. Sunt exercitation laborum aliqua laborum ipsum sit laborum aliqua reprehenderit id. Mollit sunt mollit anim magna officia. Tempor velit id adipisicing magna. Aute anim nisi in velit tempor sint nostrud. Sit aute anim cillum esse irure commodo velit cillum ad tempor duis pariatur.Consectetur irure non do sint mollit aliquip. Adipisicing amet nulla sit nulla eiusmod nulla nisi nostrud fugiat non ex labore. Deserunt et deserunt ex consectetur.</p>
+						</div>
+					</li>
+					<li>
+						<h2>C.2</h2>
+						<div class="fold">
+							<p>Laborum non consectetur incididunt sit sunt. Sunt exercitation laborum aliqua laborum ipsum sit laborum aliqua reprehenderit id. Mollit sunt mollit anim magna officia. Tempor velit id adipisicing magna. Aute anim nisi in velit tempor sint nostrud. Sit aute anim cillum esse irure commodo velit cillum ad tempor duis pariatur.Consectetur irure non do sint mollit aliquip. Adipisicing amet nulla sit nulla eiusmod nulla nisi nostrud fugiat non ex labore. Deserunt et deserunt ex consectetur.</p>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</li>
+		<li>
+			<h1>D</h1>
+			<div class="fold">
+				<p>Laborum non consectetur incididunt sit sunt. Sunt exercitation laborum aliqua laborum ipsum sit laborum aliqua reprehenderit id. Mollit sunt mollit anim magna officia. Tempor velit id adipisicing magna. Aute anim nisi in velit tempor sint nostrud. Sit aute anim cillum esse irure commodo velit cillum ad tempor duis pariatur.Consectetur irure non do sint mollit aliquip. Adipisicing amet nulla sit nulla eiusmod nulla nisi nostrud fugiat non ex labore. Deserunt et deserunt ex consectetur.</p>
+			</div>
+		</li>
+	</ul>
+
 	<div id="mindless-copy">
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lectus leo, congue ac leo id, vulputate pretium enim. Praesent congue, odio at placerat ultricies, mi libero lacinia nulla, sit amet scelerisque nunc tortor et ligula. Maecenas sit amet ipsum ac est ullamcorper aliquet. Donec sed nisl sit amet metus volutpat malesuada eget nec orci. In a ipsum volutpat, aliquet quam sed, eleifend neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer sed porta nisl.</p>
 		<p>Sed volutpat orci sed viverra commodo. Phasellus sit amet mattis eros, quis iaculis diam. Phasellus et dignissim ante. Proin id ultrices diam. Nulla accumsan rutrum neque, sit amet lacinia enim accumsan a. Donec laoreet turpis dolor, nec semper arcu fringilla at. Vestibulum mollis tellus sem, sit amet faucibus ligula laoreet sed. Integer et turpis eget felis fringilla tempus. Mauris at erat non velit varius ultricies et luctus metus. Integer interdum at lorem ultricies fermentum. Fusce ut sagittis libero. Suspendisse blandit auctor leo, vel tempus massa lobortis at.</p>
@@ -42,22 +137,12 @@
 	<script src="../helpers.js"></script>
 	<script src="../fold.js"></script>
 	<script src="../accordion.js"></script>
-	<script src="scaffolder.js"></script>
 	<script>
-		/** Scaffold accordions */
-		var target     = document.querySelector("#scaffold");
-		var bodyText   = document.querySelector("#mindless-copy");
-		var source     = target.nextSibling;
-		target.classList.add("accordion");
-		target.removeAttribute("id");
-		source.parentNode.removeChild(source);
-		new Scaffold(source.data, target, bodyText);
-		
+		"use strict";
 		
 		var elements = document.getElementsByClassName("accordion");
-		for(var i = 0, l = elements.length; i < l; ++i){
+		for(var i = 0, l = elements.length; i < l; ++i)
 			new Accordion(elements[i]);
-		}
 		
 		var testResize = false;
 		if(testResize){
