--- a/demos/nested.htm
+++ b/demos/nested.htm
@@ -2623,12 +2623,7 @@ html{
 	
 	<script src="assets/shared.js"></script>
 	<script>
-		runDemo({
-			animHeight: "auto"
-		});
-		var a = accordions[0];
-		var f = a.folds[1];
-		var dt = document.getElementById("deep-target");
+		runDemo();
 	</script>
 </body>
 </html>
