Fit top-level accordions in demos to window width

--- a/demos/disabling.htm
+++ b/demos/disabling.htm
@@ -15,8 +15,8 @@
 	margin: 0;
 	padding: 0;
 }
-	.accordion > li{
-
+	body > .accordion > li{
+		width: 100%;
 	}
 		.accordion > li > h3,
 		.accordion > li > h4{
