--- a/demos/basic-large.htm
+++ b/demos/basic-large.htm
@@ -16,8 +16,8 @@
 	margin: 0;
 	padding: 0;
 }
-	.accordion > li{
-
+	body > .accordion > li{
+		width: 100%;
 	}
 		.accordion > li > h3{
 			background: #2c4d2b;
