--- a/demos/disabling.htm
+++ b/demos/disabling.htm
@@ -141,9 +141,9 @@
 	</ul>
 
 
-	<script src="../helpers.js"></script>
-	<script src="../fold.js"></script>
-	<script src="../accordion.js"></script>
+	<script src="../src/helpers.js"></script>
+	<script src="../src/fold.js"></script>
+	<script src="../src/accordion.js"></script>
 	
 	<script src="assets/shared.js"></script>
 	
