--- a/demos/nested.htm
+++ b/demos/nested.htm
@@ -2617,9 +2617,9 @@ html{
 	</ul>
 
 
-	<script src="../helpers.js"></script>
-	<script src="../fold.js"></script>
-	<script src="../accordion.js"></script>
+	<script src="../src/helpers.js"></script>
+	<script src="../src/fold.js"></script>
+	<script src="../src/accordion.js"></script>
 	
 	<script src="assets/shared.js"></script>
 	<script>
