Confine all source files to their own subdirectory

--- a/demos/anim-switch.htm
+++ b/demos/anim-switch.htm
@@ -7,7 +7,7 @@
 <title>Animated Height Switching</title>
 
 <link rel="stylesheet" type="text/css" href="assets/reset.css" />
-<link rel="stylesheet" type="text/css" href="../accordion.css" />
+<link rel="stylesheet" type="text/css" href="../src/accordion.css" />
 <style>
 html{
 	background: #000;
@@ -391,9 +391,9 @@ aside{
 	</aside>
 
 
-	<script src="../src/helpers.js"></script>
-	<script src="../src/fold.js"></script>
-	<script src="../src/accordion.js"></script>
+	<script src="../src/es6/helpers.js"></script>
+	<script src="../src/es6/fold.js"></script>
+	<script src="../src/es6/accordion.js"></script>
 	
 	<script src="assets/shared.js"></script>
 	<script>
