--- a/demos/borders.htm
+++ b/demos/borders.htm
@@ -7,7 +7,7 @@
 <title>Accordion Demo: Borders</title>
 
 <link rel="stylesheet" type="text/css" href="assets/reset.css" />
-<link rel="stylesheet" type="text/css" href="../accordion.css" />
+<link rel="stylesheet" type="text/css" href="../src/accordion.css" />
 <style>
 
 /** Demo styling, not necessary for the accordion's final effect. */
@@ -553,9 +553,9 @@
 	</ul>
 
 
-	<script src="../src/helpers.js"></script>
-	<script src="../src/fold.js"></script>
-	<script src="../src/accordion.js"></script>
+	<script src="../src/es6/helpers.js"></script>
+	<script src="../src/es6/fold.js"></script>
+	<script src="../src/es6/accordion.js"></script>
 	
 	<script src="assets/shared.js"></script>
 	<script>
