--- a/demos/disabling.htm
+++ b/demos/disabling.htm
@@ -7,7 +7,7 @@
 <title>Accordion Demo: Disabling</title>
 
 <link rel="stylesheet" type="text/css" href="assets/reset.css" />
-<link rel="stylesheet" type="text/css" href="../accordion.css" />
+<link rel="stylesheet" type="text/css" href="../src/accordion.css" />
 <style>
 
 .accordion{
@@ -141,9 +141,9 @@
 	</ul>
 
 
-	<script src="../src/helpers.js"></script>
-	<script src="../src/fold.js"></script>
-	<script src="../src/accordion.js"></script>
+	<script src="../src/es6/helpers.js"></script>
+	<script src="../src/es6/fold.js"></script>
+	<script src="../src/es6/accordion.js"></script>
 	
 	<script src="assets/shared.js"></script>
 	
