--- a/demos/nested.htm
+++ b/demos/nested.htm
@@ -7,7 +7,7 @@
 <title>Nested Accordions</title>
 
 <link rel="stylesheet" type="text/css" href="assets/reset.css" />
-<link rel="stylesheet" type="text/css" href="../accordion.css" />
+<link rel="stylesheet" type="text/css" href="../src/accordion.css" />
 <style>
 html{
 	padding: 1em;
@@ -2617,9 +2617,9 @@ html{
 	</ul>
 
 
-	<script src="../src/helpers.js"></script>
-	<script src="../src/fold.js"></script>
-	<script src="../src/accordion.js"></script>
+	<script src="../src/es6/helpers.js"></script>
+	<script src="../src/es6/fold.js"></script>
+	<script src="../src/es6/accordion.js"></script>
 	
 	<script src="assets/shared.js"></script>
 	<script>
