Switch to using transpiled ES5 version for demos

--- a/demos/anim-switch.htm
+++ b/demos/anim-switch.htm
@@ -358,9 +358,12 @@ aside{
 	</aside>
 
 
+	<script src="../src/accordion.js"></script>
+	<!--
 	<script src="../src/es6/helpers.js"></script>
 	<script src="../src/es6/fold.js"></script>
 	<script src="../src/es6/accordion.js"></script>
+	-->
 	
 	<script src="assets/shared.js"></script>
 	<script>
