--- a/demos/borders.htm
+++ b/demos/borders.htm
@@ -554,9 +554,12 @@
 	</ul>
 
 
+	<script src="../src/accordion.js"></script>
+	<!--
 	<script src="../src/es6/helpers.js"></script>
 	<script src="../src/es6/fold.js"></script>
 	<script src="../src/es6/accordion.js"></script>
+	-->
 	
 	<script src="assets/shared.js"></script>
 	<script>
