--- a/demos/nested.htm
+++ b/demos/nested.htm
@@ -2496,9 +2496,12 @@ html{
 	</ul>
 
 
+	<script src="../src/accordion.js"></script>
+	<!--
 	<script src="../src/es6/helpers.js"></script>
 	<script src="../src/es6/fold.js"></script>
 	<script src="../src/es6/accordion.js"></script>
+	-->
 	
 	<script src="assets/shared.js"></script>
 	<script>
