Use real ECMAScript modules

--- a/demos/basic-small.htm
+++ b/demos/basic-small.htm
@@ -177,16 +177,15 @@ body{
 	<p>Cras facilisis mauris et libero sollicitudin sollicitudin. Fusce imperdiet velit eget enim gravida, a mattis sem commodo. Fusce tincidunt nec erat non suscipit. Pellentesque fringilla erat urna, non mollis lacus pulvinar sit amet. Nunc feugiat ligula ultricies dignissim condimentum. Sed rutrum nulla eu eros interdum, nec interdum sapien vehicula. Praesent non est est. Nam consequat eros eget tellus placerat pellentesque. Vivamus eu ante nisl. Suspendisse in lorem et massa consectetur adipiscing. Donec molestie pulvinar adipiscing. Phasellus iaculis ac lorem ac sollicitudin. Aliquam convallis porttitor enim vitae blandit. Pellentesque aliquam dolor semper, facilisis erat vel, vehicula augue.</p>
 
 
-	<script src="../src/accordion.js"></script>
-	<!--
-	<script src="../src/es6/helpers.js"></script>
-	<script src="../src/es6/fold.js"></script>
-	<script src="../src/es6/accordion.js"></script>
-	-->
+	<!-- ES5/Legacy -->
+	<script nomodule src="../src/accordion.js"></script>
+	<script nomodule src="assets/shared.js"></script>
 	
-	<script src="assets/shared.js"></script>
-	<script>
-		runDemo();
+	<!-- ES6+ -->
+	<script type="module">
+		import Accordion from "../src/accordion.mjs";
+		for(const el of document.querySelectorAll(".accordion"))
+			new Accordion(el);
 	</script>
 
 </body>
